feat(stage2): add trace and token usage instrumentation